--- a/src/components/search-panel/search-panel.css
+++ b/src/components/search-panel/search-panel.css
@@ -3,7 +3,7 @@
 }
 
 .search-panel .search-input {
-  width: auto;
-  flex-grow: 1;
-  margin-right: 10px;
+  /*width: auto; 
+  flex-frow: 1
+  margin-right: 10px;*/
 }
