liked-important-in-app

--- a/src/components/post-list-item/post-list-item.sass
+++ b/src/components/post-list-item/post-list-item.sass
@@ -30,11 +30,11 @@
         cursor: pointer
         user-select: none
         transition: 0.5s all
-    .like .fa-heart 
+    &.like .fa-heart 
         opacity: 1
         transform: translateX(0px)
-    .important .app-list-item-label 
+    &.important .app-list-item-label 
         color: #FFD700
-    .important .btn-star 
+    &.important .btn-star 
         color: #aeaeae
 
