add-search-in-app

--- a/src/components/post-list-item/post-list-item.sass
+++ b/src/components/post-list-item/post-list-item.sass
@@ -30,6 +30,7 @@
         cursor: pointer
         user-select: none
         transition: 0.5s all
+        width: 100%
     &.like .fa-heart 
         opacity: 1
         transform: translateX(0px)
